fix: don't wrap lines in calender

--- a/src/app.css
+++ b/src/app.css
@@ -52,3 +52,7 @@
 .school-schedule .ec-header .ec-days > .ec-day {
   text-transform: capitalize;
 }
+
+.school-schedule .ec-event-title {
+  white-space: nowrap;
+}
